# is-it-safe

./: .gitignore  README.md  pyproject.toml  requirements.txt
is-it-safe/modules/: waf.py
pkgroot/DEBIAN/: control
pkgroot/usr/share/is-it-safe/modules/: ids_ips.py
src/is_it_safe/: main.py
src/is_it_safe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/is_it_safe/modules/: fail2ban.py  ids_ips.py  network.py  utils.py  waf.py
tests/: test_core.py  test_scoring.py  test_waf.py
